# kitepilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codex_correction_prompt_template.txt  codex_task_list.txt  codex_task_prompt_template.txt  coding_questionnaire.txt  file_structure.txt  idea.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
apps/api/: .env.sample  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/kitepilot_api/: config.py  main.py
apps/api/kitepilot_api/db/: base.py  models.py  session.py
apps/api/kitepilot_api/db/migrations/: env.py
apps/api/kitepilot_api/db/migrations/versions/: 0001_init.py
apps/api/kitepilot_api/routers/: health.py
apps/api/tests/integration/: test_migrations.py
apps/api/tests/unit/: test_health.py
apps/backtester/src/: engine.py
apps/broker-svc/: pyproject.toml
apps/broker-svc/src/: main.py
apps/broker-svc/src/broker_svc/: idempotency.py  router.py
apps/broker-svc/tests/contract/: test_orders_api.py
apps/broker-svc/tests/unit/: test_idempotency.py
apps/md_gateway/: .env.sample  README.md  pyproject.toml
apps/md_gateway/src/: aggregator.py  healthcheck.py  main.py  symbol_map.py  ws_client.py
apps/md_gateway/tests/data/: golden_1m.json
apps/md_gateway/tests/unit/: test_aggregator.py  test_sim_ticks.py  test_snapshot.py
apps/risk-svc/: README.md  pyproject.toml
apps/risk-svc/src/risk_svc/: main.py  policy_store.py  state_provider.py
apps/risk-svc/src/risk_svc/routers/: risk.py
apps/risk-svc/tests/: test_risk_endpoints.py
apps/strategy_svc/: Dockerfile  pyproject.toml
apps/strategy_svc/src/: ensemble.py  loader.py  main.py  position_sizing.py
apps/strategy_svc/tests/: test_pipeline_snapshot.py
apps/strategy_svc/tests/fixtures/: bars_fixture.jsonl
config/: config.schema.json
deployment/docker/: compose.dev.yml
docs/guide/: 30-risk-matrix.md
