[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kitepilot-api"
version = "0.0.1"
description = "KitePilot FastAPI control-plane"
requires-python = ">=3.11"
authors = [{ name = "KitePilot" }]
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "psycopg2-binary>=2.9,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "mypy>=1.10",
  "ruff>=0.5",
  "black>=24.4",
  "alembic>=1.13",
  "testcontainers>=4.8"
]

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","PL"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
plugins = []
