[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kitepilot-broker-svc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27"
]

[tool.mypy]
strict = true
packages = ["risk_svc", "broker_svc"]

[tool.ruff]
line-length = 100
